--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -32,7 +32,7 @@
   
     border-right: solid white 5px;
     border-bottom:solid white    2px; ;
-    background: hsl(173, 82%, 24%);
+    background: rgb(40, 40, 40);;
 
 
 
@@ -73,7 +73,7 @@
             font-size: 21px;
             
             &:hover{
-                background: var(--mmm);
+                background: var(--mmy);
                 border-radius:1rem ;
            
 
