--- a/client/src/components/posts/createpost.scss
+++ b/client/src/components/posts/createpost.scss
@@ -102,6 +102,7 @@
           
             &:hover {
               box-shadow: 0 10px 15px -3px #488aec4f, 0 4px 6px -2px #488aec17;
+              background: var(--SecondryColor);
             }
           
             &:focus, &:active {
