--- a/client/src/components/usercomp/navuser.css
+++ b/client/src/components/usercomp/navuser.css
@@ -60,9 +60,6 @@ header .logo .icon {
     margin: auto;
     padding: 0.5rem 0;
   }
-  header .navBar .navLists .navItem {
-    padding: 0.5rem 0;
-  }
   header .navBar .navLists .navItem .navLink {
     color: var(--textColor);
     font-size: 0.9rem;
@@ -117,10 +114,72 @@ header .toggleNavbar:hover.icon {
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    gap: 1rem;
+  }
+  .header .navBar .navLists .navItem .logoutbtn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: rgb(255, 65, 65);
+    /* plus sign */
+    /* text */
+    /* hover effect on button width */
+    /* button click effect*/
+  }
+  .header .navBar .navLists .navItem .logoutbtn .sign {
+    width: 100%;
+    transition-duration: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .header .navBar .navLists .navItem .logoutbtn .sign svg {
+    width: 17px;
+  }
+  .header .navBar .navLists .navItem .logoutbtn .sign svg path {
+    fill: white;
+  }
+  .header .navBar .navLists .navItem .logoutbtn .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: 0.3s;
+  }
+  .header .navBar .navLists .navItem .logoutbtn:hover {
+    width: 125px;
+    border-radius: 40px;
+    transition-duration: 0.3s;
+    /* hover effect button's text */
+  }
+  .header .navBar .navLists .navItem .logoutbtn:hover .sign {
+    width: 30%;
+    transition-duration: 0.3s;
+    padding-left: 20px;
+  }
+  .header .navBar .navLists .navItem .logoutbtn:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: 0.3s;
+    padding-right: 10px;
+  }
+  .header .navBar .navLists .navItem .logoutbtn:active {
+    transform: translate(2px, 2px);
   }
   .header .navBar .navLists .navItem .navLink {
     color: var(--whiteColor);
-    padding: 0 2.6rem;
     font-size: 0.9rem;
     font-weight: 500;
     cursor: pointer;
