--- a/client/src/pages/internautepages/pagescss/matchinfo.scss
+++ b/client/src/pages/internautepages/pagescss/matchinfo.scss
@@ -131,7 +131,7 @@
     .teams {
         margin-top: 2rem;
         margin-left: 4rem;
-        border-right: dotted var(--cardBG) 5px;
+        border-right: dotted var(--blackColor) 5px;
         height: 35rem;
 
         .teamslect {
