--- a/client/src/pages/internautepages/pagescss/matchinfo.css
+++ b/client/src/pages/internautepages/pagescss/matchinfo.css
@@ -32,34 +32,44 @@
   height: 37rem;
   margin-left: 1rem;
   border-radius: 2rem;
-  border: var(--mmy) solid 5px;
   margin-top: 1rem;
+  box-shadow: 4px 5px 4px 4px rgba(0, 0, 0, 0.1);
+  background: var(--mmm);
 }
 .matchattrib .matchinfo .ffieldname {
   color: var(--mmy);
-  font-size: 55px;
-  transform: translate(0.5rem, 1rem);
+  font-size: 4rem;
+  transform: translate(0.5rem, 0rem);
   font-weight: 700;
   margin-left: 1rem;
 }
 .matchattrib .matchinfo .createdby {
   color: var(--whiteColor);
-  font-size: 28px;
-  transform: translate(1.5rem, 2rem);
+  font-size: 1.6rem;
+  transform: translate(1.5rem, 0rem);
   font-weight: 500;
   margin-bottom: 3rem;
 }
 .matchattrib .matchinfo .infomatch {
   color: var(--whiteColor);
-  font-size: 21px;
+  font-size: 1.2rem;
   margin-bottom: 1rem;
   margin-left: 2rem;
   font-weight: 400;
+  transform: translateY(-2rem);
 }
-.matchattrib .matchinfo .imgfield {
-  width: 20rem;
-  height: 12rem;
-  transform: translate(2rem, 0rem);
+.matchattrib .matchinfo .imgggf {
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  height: 13.5rem;
+  box-shadow: 4px 5px 4px 8px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 1rem;
+  transform: translateY(-0.6rem);
+}
+.matchattrib .matchinfo .imgggf .imgfield {
+  transform: translate(0, 0.2rem);
   border: 2px solid white;
   border-radius: 1rem;
 }
@@ -81,12 +91,13 @@
   background: var(--whiteColordeam2);
   border-radius: 1rem;
 }
-.matchattrib .teamTables .teamTable th, .matchattrib .teamTables .teamTable td {
+.matchattrib .teamTables .teamTable th,
+.matchattrib .teamTables .teamTable td {
   padding: 1rem;
   text-align: left;
 }
 .matchattrib .teamTables .teamTable th {
-  background: hsl(173, 82%, 24%);
+  background: var(--mmm);
   color: var(--whiteColor);
   font-size: 1.3rem;
   font-weight: 700;
@@ -105,7 +116,8 @@
 .matchattrib .teamTables .teamTable tr:nth-child(even) {
   background: var(--inputColor);
 }
-.matchattrib .teamTables .teamTable .tabtitrole, .matchattrib .teamTables .teamTable .tabtitname {
+.matchattrib .teamTables .teamTable .tabtitrole,
+.matchattrib .teamTables .teamTable .tabtitname {
   height: 2rem;
   width: auto;
 }
