--- a/client/src/components/homecomp/Main/main.css
+++ b/client/src/components/homecomp/Main/main.css
@@ -15,97 +15,135 @@
   --mmm: hsl(155, 51%, 45%);
 }
 
-.main {
+.mainfa {
   width: 100%;
+  height: auto;
   background: white;
 }
-.main .secTitle {
+.mainfa .secTitlefa {
   transform: translateY(-10px);
 }
-.main .secTitle .title {
+.mainfa .secTitlefa .icosearchh {
+  margin-left: -1.8rem;
+  margin-bottom: -0.5rem;
+  font-size: 1.5rem;
+  color: hsl(173, 82%, 24%);
+}
+.mainfa .secTitlefa .searchInput {
+  width: 23rem;
+  margin-bottom: 3rem;
+  margin-left: 2rem;
+  height: 2.5rem;
+  border: 0;
+  border-bottom: 2px solid var(--greytext);
+  outline: 0;
+  font-size: 1.05rem;
+  color: gray;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
+}
+.mainfa .secTitlefa .searchInput::-moz-placeholder {
+  color: gray;
+}
+.mainfa .secTitlefa .searchInput::placeholder {
+  color: gray;
+}
+.mainfa .secTitlefa .searchInput:focus {
+  padding-bottom: 6px;
+  font-weight: 400;
+  border-width: 3px;
+  -o-border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+     border-image: linear-gradient(to right, hsl(173, 82%, 24%), hsl(173, 82%, 24%));
+  border-image-slice: 1;
+}
+.mainfa .secTitlefa .titlefa {
   position: relative;
   width: -moz-max-content;
   width: max-content;
-  color: var(--textColor);
-  margin: 1rem 0;
+  color: hsl(173, 82%, 24%);
+  margin: 1rem 1rem;
   z-index: 2;
+  margin-bottom: 3rem;
 }
-.main .secTitle .title .icon {
+.mainfa .secTitlefa .titlefa .iconf {
   transform: translateY(4px);
   font-size: 25px;
 }
-.main .secTitle .title::after {
+.mainfa .secTitlefa .titlefa::after {
   position: absolute;
   content: "";
-  background-color: var(--mmm);
+  background-color: hsl(173, 82%, 24%);
   height: 5px;
-  width: 120px;
-  right: 7px;
-  bottom: 0px;
+  right: 5px;
+  bottom: -5px;
   z-index: 1;
 }
-.main .secContent {
+.mainfa .secContentfa {
   justify-content: center;
   gap: 1.5rem;
+  margin-left: 1.6rem;
 }
-.main .secContent .singleDestination {
+.mainfa .secContentfa .singleDestinationf {
   height: 100%;
   display: grid;
   row-gap: 10px;
   border-radius: 10px;
   align-items: center;
-  background: var(--cardBG);
+  background: var(--whiteColor);
   box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
   overflow: hidden;
 }
-.main .secContent .singleDestination:hover {
+.mainfa .secContentfa .singleDestinationf:hover {
   background: var(--mmm);
   box-shadow: 1 4px 4px rgba(85, 85, 114, 0.549);
   transition: 0.3S ease;
 }
-.main .secContent .singleDestination .imageDiv {
+.mainfa .secContentfa .singleDestinationf .imageDivf {
   height: 180px;
   width: 100%;
   overflow: hidden;
 }
-.main .secContent .singleDestination .imageDiv .img {
+.mainfa .secContentfa .singleDestinationf .imageDivf .imgf {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   transition: 2s ease;
 }
-.main .secContent .singleDestination .imageDiv:hover img {
+.mainfa .secContentfa .singleDestinationf .imageDivf:hover imgf {
   transform: scale(1.1);
 }
-.main .secContent .singleDestination .cardInfo {
+.mainfa .secContentfa .singleDestinationf .cardInfofa {
   padding: 1rem;
+  width: 15rem;
 }
-.main .secContent .singleDestination .cardInfo .destTitle {
+.mainfa .secContentfa .singleDestinationf .cardInfofa .destTitlef {
   color: var(--blackColor);
   font-size: 1.25rem;
 }
-.main .secContent .singleDestination .cardInfo .continent {
+.mainfa .secContentfa .singleDestinationf .cardInfofa .continentf {
   gap: 0.5rem;
 }
-.main .secContent .singleDestination .cardInfo .continent .icon {
-  color: var(--textColor);
-  font-size: 18px;
-}
-.main .secContent .singleDestination .cardInfo .continent .name {
+.mainfa .secContentfa .singleDestinationf .cardInfofa .continentf .namef {
   color: var(--textColor);
   font-weight: 400;
   font-size: 14px;
+  display: flex;
 }
-.main .secContent .singleDestination .cardInfo .fees {
-  width: 100%;
+.mainfa .secContentfa .singleDestinationf .cardInfofa .continentf .namef .iconf {
+  color: var(--textColor);
+  font-size: 18px;
+}
+.mainfa .secContentfa .singleDestinationf .cardInfofa .feesf {
+  width: 20rem;
   justify-content: space-between;
   padding: 1rem;
   margin: 1rem 0;
   border-top: 1.5px solid var(--greytext);
   border-bottom: 1.5px solid var(--greytext);
 }
-.main .secContent .singleDestination .cardInfo .fees .grade {
+.mainfa .secContentfa .singleDestinationf .cardInfofa .feesf .gradef {
   color: var(--textColor);
   max-width: 100px;
   line-height: 20px;
@@ -115,38 +153,43 @@
   font-size: 20px;
   font-weight: 500;
 }
-.main .secContent .singleDestination .cardInfo .price {
+.mainfa .secContentfa .singleDestinationf .cardInfofa .pricef {
   font-size: 2rem;
   color: var(--blackColor);
 }
-.main .secContent .singleDestination .desc {
+.mainfa .secContentfa .singleDestinationf .descf {
   font-size: 13.5px;
   color: var(--textColor);
   font-weight: 500;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
+  height: 5rem;
+  margin-right: -6rem;
 }
-.main .secContent .singleDestination .btn {
+.mainfa .secContentfa .singleDestinationf .btn {
   margin-top: 1rem;
   color: var(--whiteColor);
   font-weight: 600;
   justify-content: space-between;
   gap: 0.5rem;
 }
-.main .secContent .singleDestination .btn .icon {
+.mainfa .secContentfa .singleDestinationf .btn .icon {
   align-self: center;
   font-size: 18px;
 }
 
 @media screen and (min-width: 500px) {
-  .title {
+  .titlefa {
     font-size: 1.5rem;
   }
-  .title::after {
+  .titlefa::after {
     width: 500px !important;
   }
-  .secContent {
+  .secContentfa {
     grid-template-columns: repeat(4, 1fr);
   }
-  .secContent .singleDestination {
+  .secContentfa .singleDestinationf {
     height: auto;
   }
 }/*# sourceMappingURL=main.css.map */
