--- a/client/src/components/homecomp/Navbar/navbar.css
+++ b/client/src/components/homecomp/Navbar/navbar.css
@@ -70,15 +70,67 @@ header .logo .icon {
   header .navBar .navLists .navItem .navLink:hover {
     color: var(--mm);
   }
-  header .navBar .navLists .btn {
-    margin-top: 1rem;
+  header .navBar .navLists .btns {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: rgb(163, 142, 255);
+    /* plus sign */
+    /* text */
+    /* hover effect on button width */
+    /* button click effect */
   }
-  header .navBar .navLists .btn a {
+  header .navBar .navLists .btns .sign {
+    width: 100%;
+    transition-duration: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  header .navBar .navLists .btns .sign svg {
+    width: 17px;
+  }
+  header .navBar .navLists .btns .sign svg path {
+    fill: white;
+  }
+  header .navBar .navLists .btns .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
     font-weight: 600;
-    color: var(--whiteColor);
+    transition-duration: 0.3s;
   }
-  header .navBar .navLists .btn a .ico {
-    transform: translateY(1.5px);
+  header .navBar .navLists .btns:hover {
+    width: 125px;
+    border-radius: 40px;
+    transition-duration: 0.3s;
+    /* hover effect button's text */
+  }
+  header .navBar .navLists .btns:hover .sign {
+    width: 30%;
+    transition-duration: 0.3s;
+    padding-left: 20px;
+  }
+  header .navBar .navLists .btns:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: 0.3s;
+    padding-right: 10px;
+  }
+  header .navBar .navLists .btns:active {
+    transform: translate(2px, 2px);
   }
   header .navBar .closeNavbar {
     position: absolute;
@@ -124,7 +176,66 @@ header .toggleNavbar:hover.icon {
   .header .navBar .navLists .navItem .navLink:hover {
     color: var(--mm);
   }
-  .header .navBar .navLists .btn a .ico {
-    transform: translateY(1.5px);
+  .header .navBar .navLists .btns {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: var(--mmy);
+    /* plus sign */
+    /* text */
+    /* hover effect on button width */
+    /* button click effect */
+  }
+  .header .navBar .navLists .btns .sign {
+    width: 100%;
+    transition-duration: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .header .navBar .navLists .btns .sign svg {
+    width: 17px;
+  }
+  .header .navBar .navLists .btns .sign svg path {
+    fill: white;
+  }
+  .header .navBar .navLists .btns .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: 0.3s;
+  }
+  .header .navBar .navLists .btns:hover {
+    width: 125px;
+    border-radius: 40px;
+    transition-duration: 0.3s;
+    /* hover effect button's text */
+  }
+  .header .navBar .navLists .btns:hover .sign {
+    width: 30%;
+    transition-duration: 0.3s;
+    padding-left: 20px;
+  }
+  .header .navBar .navLists .btns:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: 0.3s;
+    padding-right: 10px;
+  }
+  .header .navBar .navLists .btns:active {
+    transform: translate(2px, 2px);
   }
 }/*# sourceMappingURL=navbar.css.map */
