--- a/client/src/components/homecomp/Welcome/welcome.css
+++ b/client/src/components/homecomp/Welcome/welcome.css
@@ -18,8 +18,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
   padding: 12rem 1.5rem 6rem;
+  margin-bottom: -1rem;
 }
 .welcome .overlay {
   position: absolute;
