--- a/client/src/components/dash/dashside.css
+++ b/client/src/components/dash/dashside.css
@@ -33,21 +33,18 @@
   margin-left: 1.3rem;
 }
 .sidsection .sidebaritems .sidebaritemgroup {
-  margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 1.5rem;
+  display: block;
 }
 .sidsection .sidebaritems .sidebaritemgroup .imgproff {
   border: 4.5px solid white;
   border-radius: 50rem;
   width: 5.8rem;
-  transform: translate(-0.1rem, 0.5rem);
+  transform: translate(0.5rem, 0.5rem);
+  margin-bottom: 2rem;
 }
 .sidsection .sidebaritems .sidebaritemgroup .sidebaritem {
-  display: flex;
-  margin-left: -0.5rem;
-  margin-right: 0rem;
-  margin-top: 3rem;
   margin-bottom: 2rem;
   width: 8rem;
   color: white;
