--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -46,27 +46,25 @@
 
 
     
-        margin-left: 1rem;
         margin-right: 1rem;
         margin-top: 1.5rem;
+        display: block;
         .imgproff{
             border: 4.5px solid white;
             border-radius:50rem;
             width: 5.8rem;
-            transform: translate(-0.1rem,0.5rem);
+            transform: translate(0.5rem,0.5rem);
+            margin-bottom: 2rem;
         }
 
 
 
 
         .sidebaritem{
-            display: flex;
 
-            margin-left: -0.5rem;
-            margin-right: 0rem;
-            margin-top: 3rem;
+           margin-bottom: 2rem;
 
-            margin-bottom: 2rem;
+           
             width: 8rem;
          
             color: white;
