--- a/client/src/components/matchs/match.scss
+++ b/client/src/components/matchs/match.scss
@@ -61,12 +61,23 @@
 
     .matchContent {
         justify-content: center;
-        gap: 1.5rem;
-
+      
+        display: flex;
+        .deleteButton{
+            color: red;
+            font-size: 1.5rem;
+            width: 1rem;
+            border:  none;
+            background: transparent;
+            cursor: pointer;
+            margin-left:-1.2rem;
+            transform: translate(1.5rem,-0.2rem);
+      
+        }
 
         .singlematch {
             height: 2.7rem;
-            width: 85%;
+            width: 75rem;
             margin: 0 auto;
             margin-bottom: 0.6rem;
             border-radius: 2rem;
@@ -79,6 +90,7 @@
                 background: var(--blackColor5);
                 box-shadow: 1 4px 4px rgba(85, 85, 114, 0.549);
                 transition: .3S ease;
+                transform: translateX(-1rem);
 
             }
 
@@ -103,7 +115,7 @@
                     font-size: 1.3rem;
                     margin-top: 2.1rem;
                     margin-left: 1rem;
-                    margin-right: 3rem;
+                    margin-right: 1rem;
 
                 }
 
