--- a/client/src/components/posts/getpost.scss
+++ b/client/src/components/posts/getpost.scss
@@ -76,6 +76,14 @@
 
                 height: flex;
                 transform: translate(0px, -7px);
+                .deleteButtons{
+                    transform: translate(35rem,-4rem);
+                    font-size: 1.1rem;
+                    border: none;
+                    background: transparent;
+                    color: red;
+                    cursor: pointer;
+                }
 
                 .postpic {
 
@@ -99,6 +107,7 @@
                     padding-top: 1rem;
                     padding-bottom: 1.5rem;
                     background: var(--whiteColor);
+                    margin-top: -0.9rem;
 
 
 
