--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -42,7 +42,7 @@
   line-height: 2.25rem;
   font-weight: 600;
   text-align: center;
-  color: var(--whiteColor);
+  color: hsl(173, 82%, 24%);
   transform: translateY(-65px);
 }
 .bg .log .formtxt {
