--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -60,7 +60,7 @@ width: 100%;
             font-size: 3rem;
             font-weight: 500;
             text-align: center;
-            color: var(--whiteColor);
+            color: hsl(173, 82%, 24%);
             transform: translate(1rem,-3rem);
 
         }
