--- a/client/src/pages/internautepages/pagescss/fieldinfo.scss
+++ b/client/src/pages/internautepages/pagescss/fieldinfo.scss
@@ -14,6 +14,7 @@
     --cardHover: rgba(255, 255, 255);
     --mmm: hsl(155, 51%, 45%);
     --blackColor2: hsl(0, 0%, 20%);
+    --color2:hsl(173, 55%, 38%);
 }
 
 
@@ -24,109 +25,5 @@
     align-items: center;
     gap: 1rem;
 
-    .fielddetail {
-        display: flex;
-        width: 90%;
-        max-width: 1200px;
-        background: var(--mmm);
-        border-radius: 3rem;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-        .detailname{
-            font-size: 6rem;
-            color: var(--mmy);
-        }
-
-        .fieldiii {
-            display: flex;
-            flex-direction: row;
-            gap: 2rem;
-            width: 100%;
-
-            .fielddetailss {
-                flex: 1;
-                padding: 2rem;
-                display: flex;
-                flex-direction: column;
-                margin-top: -1rem;
-
-                .detail {
-                    margin-bottom: 1rem;
-                    font-size: 1.5rem;
-                    color: var(--whiteColor);
-                    font-weight: 500;
-                    
-
-                    &:hover {
-                        color: var(--mmy);
-                    }
-                }
-            }
-
-            .imgg {
-                flex: 1;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 2rem;
-                box-shadow: 4px 5px 4px 8px rgba(0, 0, 0, 0.1);
-                background: white;
-
-
-                .imggg {
-                    max-width: 100%;
-                    height: auto;
-                    border-radius: 5rem;
-                }
-            }
-        }
-    }
-
-    .matchtable {
-        width: 90%;
-        margin-bottom: 1rem;
-
-        .matchtableinfo {
-            width: 100%;
-            border-collapse: collapse;
-            background: var(--whiteColordeam);
-            border-radius: 1rem;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 2rem;
-
-            th,
-            td {
-                padding: 1rem;
-                text-align: center;
-            }
-
-            th {
-                background: hsl(173, 82%, 24%);
-                color: var(--whiteColor);
-                font-size: 1.3rem;
-                font-weight: 700;
-                text-transform: uppercase;
-            }
-
-            td {
-                background: var(--whiteColor);
-                color: var(--textColor);
-                font-size: 1rem;
-                font-weight: 400;
-            }
-
-            tr {
-                &:nth-child(even) {
-                    background: var(--inputColor);
-                }
-            }
-        }
-    }
-
-    .error {
-        color: red;
-        font-size: 1rem;
-        margin-top: 1rem;
-    }
+   
 }
