--- a/client/src/components/matchs/creatematch.css
+++ b/client/src/components/matchs/creatematch.css
@@ -42,7 +42,7 @@
   border-bottom: 2px solid var(--greytext);
   outline: 0;
   font-size: 1.05rem;
-  color: white;
+  color: gray;
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
@@ -127,7 +127,7 @@
   border-bottom: 2px solid var(--greytext);
   outline: 0;
   font-size: 1.05rem;
-  color: white;
+  color: gray;
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
