--- a/client/src/components/matchs/creatematch.scss
+++ b/client/src/components/matchs/creatematch.scss
@@ -53,7 +53,7 @@
                 border-bottom: 2px solid var(--greytext);
                 outline: 0;
                 font-size: 1.05rem;
-                color: white;
+                color: gray;
                 padding: 7px 0;
                 background: transparent;
                 transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
@@ -164,7 +164,7 @@
             border-bottom: 2px solid var(--greytext);
             outline: 0;
             font-size: 1.05rem;
-            color: white;
+            color: gray;
             padding: 7px 0;
             background: transparent;
             transition: border-color 0.2s, padding-bottom 0.2s, font-weight 0.2s;
