--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -97,7 +97,7 @@
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
-  color: white;
+  color: var(--blackColor);
   transform: translateX(100px);
 }
 .bg .log .formtxt .txtsig span {
