--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -112,7 +112,7 @@
             display: flex; 
             margin-top: 1.25rem; 
             gap: 0.5rem; 
-            color: white;
+            color: var(--blackColor);
             transform: translateX(100px);
             span {
                 color: var(--mm);
