--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -99,7 +99,7 @@
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
-  color: white;
+  color: var(--blackColor);
   transform: translateX(40px);
 }
 .bgl .logl .formtxtl .txtsigl span {
