--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -123,7 +123,7 @@ width: 100%;
                 display: flex;
                 margin-top: 1.25rem;
                 gap: 0.5rem;
-                color: white;
+                color: var(--blackColor);
                 transform: translateX(40px);
 
                 span {
